Add research, remove present from head TA

--- a/src/resume.tex
+++ b/src/resume.tex
@@ -79,9 +79,9 @@
         \begin{flushleft}
             nprindle@gatech.edu
         \end{flushleft}
-        
+
         (216) 217-6330
-        
+
         \begin{flushright}
             \texttt{github.com/nprindle}
         \end{flushright}
@@ -106,27 +106,33 @@
 %-----------EXPERIENCE-----------
 \section{Experience}
 \resumeSubHeadingListStart{}
+    \resumeSubheading{Georgia Tech Researcher}{June 2021--Present}
+    \resumeItemListStart{}
+        \item{Researched parallel and asynchronous HPC runtimes in Rust}
+        \item{Developed, documented, and tested a Rust implementation of actors/selectors for the HClib C/C++ library}
+        \item{Benchmarked Rust implementation against competing programming models on the Cori supercomputer}
+    \resumeItemListEnd{}
+
     \resumeSubheading{Vertically Integrated Project---Member of Team Phoenix}{January 2020--Present}
     \resumeItemListStart{}
         \item{Studied HPC frameworks, node-level optimization, parallel algorithms, and more}
         \item{Tested, tuned and benchmarked applications on Georgia Tech HPC clusters}
         \item{Won third place overall in the Student Cluster Competition in the 2020 Supercomputing Conference}
-        \item{Wrote the first place paper on reproducing MemXCT benchmarks on Azure HPC clusters at SCC20}
-        \item{Currently revising MemXCT reproducibility paper for publication in selective reproducibility feature in SCC21 journal}
+        \item{Wrote the first place paper on reproducing MemXCT benchmarks on Azure HPC clusters at SCC20, which is now published in a selective reproducibility feature in the SCC21 journal}
     \resumeItemListEnd{}
-    
-    \resumeSubheading{CS 2110 Head TA}{August 2020--Present}
+
+    \resumeSubheading{CS 2110 Head TA}{August 2020--June 2021}
     \resumeItemListStart{}
         \item{Developed and maintained a diverse technology stack for simulation software, assignment autograding tools, and containerization and distribution of course software}
         \item{Organized the course schedule and coordinated the creation of course materials}
     \resumeItemListEnd{}
-    
+
     \resumeSubheading{Teaching Assistant}{January 2019--August 2020}
     \resumeItemListStart{}
         \item{TA for CS 1331 (Intro to Object-Oriented Programming), CS 2340 (Objects and Design), and CS 2110 (Computer Organization and Programming)}
         \item{Instructed students in lab, assisted students in office hours, and developed frameworks for autograding}
     \resumeItemListEnd{}
-    
+
     \resumeSubheading{Layer 3 Communications Software Developer}{May 2019--August 2019}
     \resumeItemListStart{}
         \item{Developed an automated end-to-end networking provisioning tool for an internet service provider in Haskell}
@@ -138,7 +144,7 @@
 \section{Technical Skills}
 
 \begin{itemize}[leftmargin=0.15in,itemsep=1pt]
-    \item \textbf{Programming Languages}: Haskell, TypeScript, C, Rust, C++, Python, Java, Scala
+    \item \textbf{Programming Languages}: Rust, C++, C, Haskell, TypeScript, Agda, Python, Java
     \item \textbf{Build Systems and Tooling}: Nix, Make, Autotools, CMake, Gradle, Git, \LaTeX{}
     \item \textbf{DevOps}: Docker, NixOS, NixOps, Azure, CycleCloud, AWS
     \item \textbf{Cluster Administation}: Spack, Singularity, Lmod, PBS, Slurm
