--- a/resume.tex
+++ b/resume.tex
@@ -77,7 +77,7 @@
     {\LARGE Nicole Prindle} \\ \vspace{2pt}
     \begin{multicols}{3}
         \begin{flushleft}
-            nprindle@gatech.edu
+            nprindle18@gmail.com
         \end{flushleft}
 
         (216) 217-6330
@@ -144,11 +144,11 @@
 \section{Technical Skills}
 
 \begin{itemize}[leftmargin=0.15in,itemsep=1pt]
-    \item \textbf{Programming Languages}: Rust, C++, C, Haskell, TypeScript, Agda, Python, Java
-    \item \textbf{Build Systems and Tooling}: Nix, Make, Autotools, CMake, Gradle, Git, \LaTeX{}
-    \item \textbf{DevOps}: Docker, NixOS, NixOps, Azure, CycleCloud, AWS
-    \item \textbf{Cluster Administation}: Spack, Singularity, Lmod, PBS, Slurm
+    \item \textbf{Programming Languages}: Rust, C++, C, Haskell, TypeScript, Java, Python
+    \item \textbf{Build Systems and Tooling}: Nix, Bazel, Gradle, Maven, Make, CMake, Autotools, Git, \LaTeX{}
+    \item \textbf{HPC Cluster Administation}: Spack, Singularity, Lmod, PBS, Slurm
     \item \textbf{HPC Frameworks}: OpenMP, MPI (OpenMPI, MVAPICH, etc.), CUDA
+    \item \textbf{DevOps}: Docker, Ansible, NixOS, NixOps, Azure, CycleCloud
 \end{itemize}\vspace{-5pt}
 
 \section{Relevant Coursework}
