Add cse 6240/cs 6210

--- a/resume.tex
+++ b/resume.tex
@@ -153,6 +153,7 @@
 
 \section{Relevant Coursework}
 
+CSE 6220 (High Performance Computing), CS 6390 (Programming Languages),
 VIP 3601 (Team Phoenix), CS 4290 (Advanced Computer Organization and Programming), CS 3210 (Operating Systems), CS 4240 (Compilers \& Interpreters), CS 3220 (Processor Design), CS 4540 (Advanced Algorithms)
 
 \end{document}
