Add linkedin link

--- a/resume.tex
+++ b/resume.tex
@@ -83,7 +83,8 @@
         (216) 217-6330
 
         \begin{flushright}
-            \texttt{github.com/nprindle}
+            \href{https://github.com/nprindle}{\texttt{github.com/nprindle}} \\
+            \href{https://www.linkedin.com/in/nprindle}{\texttt{linkedin.com/in/nprindle}} \\
         \end{flushright}
     \end{multicols}
 \end{center}
