Update end date for vip

--- a/resume.tex
+++ b/resume.tex
@@ -114,7 +114,7 @@
         \item{Benchmarked Rust implementation against competing programming models on the Cori supercomputer}
     \resumeItemListEnd{}
 
-    \resumeSubheading{Vertically Integrated Project---Member of Team Phoenix}{January 2020--Present}
+    \resumeSubheading{Vertically Integrated Project---Member of Team Phoenix}{January 2020--December 2021}
     \resumeItemListStart{}
         \item{Studied HPC frameworks, node-level optimization, parallel algorithms, and more}
         \item{Tested, tuned and benchmarked applications on Georgia Tech HPC clusters}
